# arianna

./: .cache  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  epub-view.js  main.html  main.py  org.kde.arianna.appdata.xml  org.kde.arianna.desktop  snapcraft.yaml  test.epub  test.qml
.reuse/: dep5
po/ar/: arianna.po
po/ast/: arianna.po
po/ca/: arianna.po
po/ca@valencia/: arianna.po
po/cs/: arianna.po
po/de/: arianna.po
po/en_GB/: arianna.po
po/eo/: arianna.po
po/es/: arianna.po
po/eu/: arianna.po
po/fi/: arianna.po
po/fr/: arianna.po
po/ga/: arianna.po
po/gl/: arianna.po
po/he/: arianna.po
po/hi/: arianna.po
po/hu/: arianna.po
po/ia/: arianna.po
po/is/: arianna.po
po/it/: arianna.po
po/ja/: arianna.po
po/ka/: arianna.po
po/ko/: arianna.po
po/lt/: arianna.po
po/lv/: arianna.po
po/nl/: arianna.po
po/pl/: arianna.po
po/pt/: arianna.po
po/pt_BR/: arianna.po
po/ro/: arianna.po
po/ru/: arianna.po
po/sa/: arianna.po
po/sk/: arianna.po
po/sl/: arianna.po
po/sv/: arianna.po
po/tr/: arianna.po
po/ug/: arianna.po
po/uk/: arianna.po
po/zh_CN/: arianna.po
po/zh_TW/: arianna.po
src/: CMakeLists.txt  Messages.sh  book.h  bookdatabase.cpp  bookdatabase.h  booklistmodel.cpp  booklistmodel.h  bookserver.cpp  bookserver.h  cache.cpp  cache.h  categoryentriesmodel.cpp  categoryentriesmodel.h  clipboard.cpp  clipboard.h  colorschemer.cpp  colorschemer.h  config.kcfg  database.cpp  database.h  epubcontainer.cpp  epubcontainer.h  format.cpp  format.h  library.cpp  library.h  main.cpp  navigation.cpp  navigation.h  propertycontainer.cpp  propertycontainer.h  resources.qrc  resources.qrc.in  tableofcontentmodel.cpp  tableofcontentmodel.h
src/autotests/: CMakeLists.txt  databasetest.cpp  tableofcontenttest.cpp
src/autotests/data/: book-metadata.json  data.db  mobidick-toc.json
src/content/ui/: BookDetailsPage.qml  ColorScheme.qml  ColorSchemeDelegate.qml  EpubViewerPage.qml  GridBrowserDelegate.qml  LibraryPage.qml  SearchModel.qml  SettingsPage.qml  TableOfContentDrawer.qml  epub-viewer.js  epub.js  epub.js.license  main.html  main.qml  markup.js  reader.html  reader.js  utils.js
src/contentlist/: baloocontentlister.cpp  baloocontentlister.h  contentlist.cpp  contentlist.h  contentlisterbase.cpp  contentlisterbase.h  contentquery.cpp  contentquery.h  filesystemcontentlister.cpp  filesystemcontentlister.h  manualcontentlister.cpp  manualcontentlister.h
src/qml/: BookDetailsPage.qml  EpubViewerPage.qml  LibraryPage.qml  Main.qml  SettingsPage.qml  TableOfContentDrawer.qml  main.html  markup.js  reader.js  utils.js
